[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "v_vae_core"
version = "0.1.1"
description = "Vates FrameBus + async DCT (PyO3)"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }

[tool.maturin]
module-name = "v_vae_core"
features = ["python"]
